alterações no coffer

--- a/coffers.html
+++ b/coffers.html
@@ -19,25 +19,24 @@
             <a href="index.html">Home</a>
             <a href="https://www.canva.com/design/DAGN07FUg4Y/4mKHwvI9jegVbi24z3Feyg/edit?utm_content=DAGN07FUg4Y&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Our project</a>
             <a href="https://www.instagram.com/rescuekids_?igsh=ZW0zdnRzbXhneHJ4">Social Media</a>
-            <a href="storys.html">Storys</a>
-            <a href="ngos.html">NGOs</a>
+            <a href="https://www.canva.com/design/DAGPnYXPGlY/r13qAn9bIn7-Kljm2DCjNQ/edit?utm_content=DAGPnYXPGlY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">NGOs</a>
         </div>
     </header>
     <main>
         <div class="title">
-            <h1>Rescue Kids</h1>
+            <h1>Coffers</h1>
             <span>Rescue Kids</span> <!-- Serve para criar um tag genérica para texto (como o div)-->
         </div>
         <div class="container">
             <div class="description">
-                <h2>Rescue Kids</h2>
+                <h2>Rescue Kids Coffer</h2>
                 <p>
-                    Rescue Kids is a project that aims to rescue,protect children subject to child labor and giving these children the rights they deserve.
+                    Donate money to contribute to our cause, let's help children
                 </p>
             </div>
             <div class="text">
-                <a href="https://www.instagram.com/rescuekids_?igsh=ZW0zdnRzbXhneHJ4 ">
-                    Join Us
+                <a href="#">
+                    Add money to safe
                 </a>
             </div>
         </div>
@@ -45,6 +44,6 @@
     <footer>
         Copyright 2024 | Letícia Souza 
     </footer>
-    <img class="criancas-img" src="./img/criancas.png" alt="crianças">
+    <img class="coffer-img" src="./img/cofre.gif" alt="crianças">
 </body>
 </html>
