--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <div>
             <a href="https://www.canva.com/design/DAGN07FUg4Y/4mKHwvI9jegVbi24z3Feyg/edit?utm_content=DAGN07FUg4Y&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Our project</a>
             <a href="https://www.instagram.com/rescuekids_?igsh=ZW0zdnRzbXhneHJ4">Social Media</a>
-            <a href="storys.html">Storys</a>
-            <a href="squirtle.html">NGOs</a>
+            <a href="https://www.canva.com/design/DAGPnYXPGlY/r13qAn9bIn7-Kljm2DCjNQ/edit?utm_content=DAGPnYXPGlY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">NGOs</a>
             <a href="coffers.html">Coffers</a>
         </div>
     </header>
